[package]
name = "kiwifarms-captchabuster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
clap = { version = "4", features = ["derive"] }
scraper = "0.19"
sha2 = "0.10"
hex = "0.4"
rayon = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
num_cpus = "1"
regex = "1.11.1"
once_cell = "1.19"

log = "0.4"
env_logger = "0.11"
